roles/longhorn/files/networkpolicy.yml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all
  namespace: longhorn-system
spec:
  podSelector: {}
  policyTypes:
    - Ingress

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: backing-image-data-source
  namespace: longhorn-system
spec:
  podSelector:
    matchLabels:
      longhorn.io/component: backing-image-data-source
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: longhorn-manager
        - podSelector:
            matchLabels:
              longhorn.io/component: instance-manager
        - podSelector:
            matchLabels:
              longhorn.io/component: backing-image-manager
        - podSelector:
            matchLabels:
              longhorn.io/component: backing-image-data-source

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: backing-image-manager
  namespace: longhorn-system
spec:
  podSelector:
    matchLabels:
      longhorn.io/component: backing-image-manager
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: longhorn-manager
        - podSelector:
            matchLabels:
              longhorn.io/component: instance-manager
        - podSelector:
            matchLabels:
              longhorn.io/component: backing-image-manager
        - podSelector:
            matchLabels:
              longhorn.io/component: backing-image-data-source

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: instance-manager
  namespace: longhorn-system
spec:
  podSelector:
    matchLabels:
      longhorn.io/component: instance-manager
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: longhorn-manager
        - podSelector:
            matchLabels:
              longhorn.io/component: instance-manager
        - podSelector:
            matchLabels:
              longhorn.io/component: backing-image-manager
        - podSelector:
            matchLabels:
              longhorn.io/component: backing-image-data-source

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: longhorn-manager
  namespace: longhorn-system
spec:
  podSelector:
    matchLabels:
      app: longhorn-manager
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: longhorn-manager
        - podSelector:
            matchLabels:
              app: longhorn-ui
        - podSelector:
            matchLabels:
              app: longhorn-csi-plugin
        - podSelector:
            matchLabels:
              longhorn.io/managed-by: longhorn-manager
            matchExpressions:
              - key: recurring-job.longhorn.io
                operator: Exists
        - podSelector:
            matchExpressions:
              - key: longhorn.io/job-task
                operator: Exists
        - podSelector:
            matchLabels:
              app: longhorn-driver-deployer
